<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.weather.MainActivity">

    <TextView
        android:id="@+id/tvApiKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_16dp"
        android:text="@string/label_your_api_key"
        android:textSize="@dimen/text_size_16sp"
        android:textStyle="bold"
        android:textColor="@color/colorPink"
        android:layout_marginTop="@dimen/label_32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilApiKey"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_8dp"
        android:layout_marginStart="@dimen/dimens_16dp"
        android:layout_marginEnd="@dimen/dimens_16dp"
        android:enabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvApiKey">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtApiKey"
            android:text="@string/label_api_key"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvCityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_16dp"
        android:layout_marginTop="@dimen/dimens_16dp"
        android:text="@string/label_city_name"
        android:textSize="@dimen/text_size_16sp"
        android:textStyle="bold"
        android:textColor="@color/colorPink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilApiKey" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCityName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_8dp"
        android:layout_marginStart="@dimen/dimens_16dp"
        android:layout_marginEnd="@dimen/dimens_16dp"
        android:hint="@string/label_select_your_city"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCityName">

        <AutoCompleteTextView
            android:id="@+id/edtCityName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_submit"
        android:layout_marginStart="@dimen/dimens_16dp"
        android:layout_marginEnd="@dimen/dimens_16dp"
        android:layout_marginTop="@dimen/dimens_16dp"
        app:layout_constraintTop_toBottomOf="@+id/tilCityName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>