<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.weather.DetailWeatherActivity">

    <TextView
        android:id="@+id/tvCelsius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_16dp"
        android:text="@string/label_celsius"
        android:textSize="@dimen/text_size_16sp"
        android:textStyle="bold"
        android:textColor="@color/colorPink"
        android:layout_marginTop="@dimen/label_32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCelsius"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_8dp"
        android:layout_marginStart="@dimen/dimens_16dp"
        android:layout_marginEnd="@dimen/dimens_16dp"
        android:enabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCelsius">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtCelsius"
            android:text="@string/label_api_key"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvFahrenheit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_16dp"
        android:layout_marginTop="@dimen/dimens_16dp"
        android:text="@string/label_fahrenheit"
        android:textSize="@dimen/text_size_16sp"
        android:textStyle="bold"
        android:textColor="@color/colorPink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilCelsius" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilFahrenheit"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:layout_marginTop="@dimen/dimens_8dp"
        android:layout_marginStart="@dimen/dimens_16dp"
        android:layout_marginEnd="@dimen/dimens_16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFahrenheit">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtFahrenheit"
            android:text="@string/label_api_key"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>